--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-currency",
-  "version": "15.0.0",
+  "version": "16.0.0",
   "description": "A very simple currency mask directive that allows using a number attribute with the ngModel.",
   "author": "Neri Bez Fontana",
   "license": "MIT",
@@ -22,19 +22,15 @@
     "number"
   ],
   "peerDependencies": {
-    "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0"
+    "@angular/common": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/forms": "^16.0.0"
   },
   "dependencies": {
     "tslib": "^2.5.0"
   },
   "sideEffects": false,
-  "module": "fesm2015/ngx-currency.mjs",
-  "es2020": "fesm2020/ngx-currency.mjs",
-  "esm2020": "esm2020/ngx-currency.mjs",
-  "fesm2020": "fesm2020/ngx-currency.mjs",
-  "fesm2015": "fesm2015/ngx-currency.mjs",
+  "module": "fesm2022/ngx-currency.mjs",
   "typings": "index.d.ts",
   "exports": {
     "./package.json": {
@@ -42,11 +38,9 @@
     },
     ".": {
       "types": "./index.d.ts",
-      "esm2020": "./esm2020/ngx-currency.mjs",
-      "es2020": "./fesm2020/ngx-currency.mjs",
-      "es2015": "./fesm2015/ngx-currency.mjs",
-      "node": "./fesm2015/ngx-currency.mjs",
-      "default": "./fesm2020/ngx-currency.mjs"
+      "esm2022": "./esm2022/ngx-currency.mjs",
+      "esm": "./esm2022/ngx-currency.mjs",
+      "default": "./fesm2022/ngx-currency.mjs"
     }
   }
 }
